<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_btn_action_menu"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_clear_chat"
                android:icon="@drawable/broom48"
                android:title="@string/clear_chat"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_delete_chat"
                android:icon="@drawable/ic_delete"
                android:title="@string/delete_chat"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_create_key"
                android:icon="@drawable/ic_baseline_vpn_key_24"
                android:title="@string/create_key"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_enter_key"
                android:icon="@drawable/ic_baseline_text_fields_24"
                android:title="@string/enter_key"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_change_key"
                android:icon="@drawable/ic_btn_action_menu_change_name"
                android:title="@string/change_key"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_see_key"
                android:icon="@drawable/ic_baseline_remove_red_eye_24"
                android:title="@string/see_key"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_delete_key"
                android:icon="@drawable/ic_baseline_delete_forever_24"
                android:title="@string/delete_key"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_call"
                android:icon="@drawable/ic_baseline_add_ic_call_24"
                android:title="Позвонить"
                app:showAsAction="never" />
        </menu>


    </item>

</menu>