<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.regidter.EnterPhoneNumberFragment">

    <EditText
        android:id="@+id/register_input_phone_number"
        style="@style/editRegisterText"
        android:autofillHints=""
        android:textStyle="italic"
        android:hint="@string/_7_xxxxxxxxxx"
        android:textSize="@dimen/normal_text"
        android:textColorHint="@color/material_drawer_hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:hint="@string/register_hint_default_code"
        android:layout_width="wrap_content"
        android:id="@+id/register_input_code"
        android:textSize="24sp"
        style="@style/editRegisterText"
        android:autofillHints=""
        android:cursorVisible="true"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:maxLength="6"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_input_phone_number" />
<TextView
    android:id="@+id/text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/register_input_code"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/sms"
    android:visibility="invisible"
    app:layout_constraintStart_toStartOf="parent"
    android:padding="12dp"
    android:gravity="center"
    android:textStyle="bold"/>
    <ProgressBar
        android:id="@+id/progress_bar_enter_code"
        style="@android:style/Widget.Holo.Light.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_input_code" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/register_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/standard_horizontal_margin"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>